Bug#33175, Falcon table hangs when insertng over 8M rows - Changed exclusive lock to shared lock for syncIndexes in SRLUpdateIndexes to reduce conflict between the client and the gopher threads.