storage/falcon/SRLUpdateIndex.cpp
@@ -40,7 +40,8 @@ SRLUpdateIndex::~SRLUpdateIndex(void)
 void SRLUpdateIndex::append(DeferredIndex* deferredIndex)
 {
 	Sync syncIndexes(&log->syncIndexes, "SRLUpdateIndex::append");
-	syncIndexes.lock(Exclusive);
+//	syncIndexes.lock(Exclusive);
+	syncIndexes.lock(Shared);
 
 	Transaction *transaction = deferredIndex->transaction;
 	DeferredIndexWalker walker(deferredIndex, NULL);
